--- a/0913/styles.css
+++ b/0913/styles.css
@@ -31,10 +31,10 @@ li a {
   text-decoration: none;
 }
 
-/*li a:hover {
+li a:hover {
   background-color: grey;
   text-decoration: none;
-}*/
+}
 
 iframe {
   width:900px;
