--- a/port/css/layouts.css
+++ b/port/css/layouts.css
@@ -6,7 +6,7 @@ html{
 body {
   margin-top: 30px;
   margin-left: 10px;
-  margin-right: 5px;
+  margin-right: 30px;
 }
 
 .grid {
@@ -62,15 +62,8 @@ body {
   height:auto;
 }
 
-.grid .drawing-text {
-  /*border: 1px solid black;*/
-  grid-column-start: 2;
-  grid-column-end: 3;
-  grid-row-start: 3;
-  grid-row-end: 4;
-
-  margin-top:30px;
-  margin-left:50px;
+.grid .drawing-text a {
+  margin-top: 10px;
   font-size: 0.9em;
   font-weight: normal;
   line-height: 1.6;
