--- a/port/css/layouts.css
+++ b/port/css/layouts.css
@@ -119,10 +119,12 @@ body {
 
 .sidebar a {
   text-decoration: none;
+  color: black;
 }
 
 .sidebar a:link {
   text-decoration: none;
+  color: black;
 }
 
 .sidebar a:visited {
